<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">basic-transition</string>
    <string name="hello_world">Hello world!</string>

    <string name="scene">Scene</string>
    <string name="scene_1">1</string>
    <string name="scene_2">2</string>
    <string name="scene_3">3</string>
    <string name="scene_4">4</string>
    <string name="hello">Hello!</string>
    <string name="additional_message">This text fades in and out.</string>
</resources>
